# calculators

./: .gitignore  README.md  flake.nix
csharp-calculator/: .gitignore  Main.glade  MainWindow.cs  Program.cs  csharp-calculator.csproj  default.nix  packages.lock.json  shell.nix  style.css
java-calculator/: default.nix  pom.xml  shell.nix
java-calculator/src/main/java/: module-info.java
java-calculator/src/main/java/com/perigord/: App.java  Controller.java
java-calculator/src/main/resources/com/perigord/: scene.fxml  styles.css
python-calculator/: default.nix  pyproject.toml  shell.nix
python-calculator/python_calculator/: __init__.py  mainWindow.py
python-calculator/python_calculator/resources/: __init__.py
