[tool.poetry]
name = "python-calculator"
version = "0.1.0"
description = ""
authors = ["Trouble-Truffle <perigordtruffle7318@gmail.com>"]
readme = "README.md"
packages = [{include = "python_calculator"}]

[tool.poetry.scripts]
python-calculator = "python_calculator:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pygobject = "^3.46.0"
importlib-resources = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
